<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.almostrealism</groupId>
    <artifactId>Common</artifactId>
    <version>0.55</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<modules>
		<module>relation</module>
		<module>io</module>
		<module>code</module>
		<module>hardware</module>
		<module>algebra</module>
		<module>geometry</module>
		<module>graph</module>
		<module>stats</module>
		<module>uml</module>
		<module>swing</module>
		<module>chemistry</module>
		<module>color</module>
		<module>economics</module>
		<module>heredity</module>
		<module>physics</module>
		<module>space</module>
		<module>time</module>
		<module>utils</module>
		<module>optimize</module>
		<module>collect</module>
		<module>ml</module>
	</modules>

	<!-- Output to jar format -->
	<packaging>pom</packaging>

    <build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<compilerArgs>
						<arg>-h</arg>
						<arg>target/headers</arg>
					</compilerArgs>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

    <dependencies>
		<!-- TODO Can't this be removed? -->
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>2.8.3</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

	<distributionManagement>
		<repository>
			<id>central</id>
			<url>https://almostrealism.jfrog.io/artifactory/default-libs-release</url>
		</repository>
<!--		<repository>-->
<!--			<id>internal</id>-->
<!--			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>-->
<!--		</repository>-->
<!--		<snapshotRepository>-->
<!--			<id>internal</id>-->
<!--			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>-->
<!--		</snapshotRepository>-->
	</distributionManagement>
</project>
